--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -36,6 +36,7 @@
 <link href="{{ '/basic.css' | prepend: site.baseurl }}" rel="stylesheet">
 <link href="{{ '/highlight.css' | prepend: site.baseurl }}" rel="stylesheet">
 <link href="{{ '/index.css' | prepend: site.baseurl }}" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 {% feed_meta %}
 <!-- {% if site.comments.disqus and page.comments %}<script src="//{{ site.comments.disqus }}.disqus.com/embed.js" async></script>{% endif %} -->
 <!-- {% if site.comments.isso and page.comments %}<script data-isso="http://{{ site.comments.isso }}" src="//{{ site.comments.isso }}/js/embed.min.js"></script>{% endif %} -->
@@ -44,6 +45,7 @@
   <nav>
     <div>{% for path in site.navigation %}{% assign node = site.pages | where: "path", path | first %}<a href="{{ node.url | prepend: site.baseurl }}">{{ node.title }}</a>{% endfor %}</div>
     <div>{% for link_hash in site.links %}{% for link in link_hash %}<a href="{{ link[1] }}"><i class="fa fa-{{ link[0] }}"></i></a>{% endfor %}{% endfor %}</div>
+    <div><a href="https://scholar.google.com/citations?user=fs01uyQAAAAJ&hl=en&oi=ao"><i class="ai ai-google-scholar-square ai-3x"></i></a></div>
   </nav>
 </header>
 {{ content }}
