--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -44,7 +44,7 @@
   <h1><a href="{{ site.baseurl }}">{{ site.title }}</a></h1>
   <nav>
     <div>{% for path in site.navigation %}{% assign node = site.pages | where: "path", path | first %}<a href="{{ node.url | prepend: site.baseurl }}">{{ node.title }}</a>{% endfor %}</div>
-    <div><a href="https://scholar.google.com/citations?user=fs01uyQAAAAJ&hl=en&oi=ao"><i class="ai ai-google-scholar"></i></a>{% for link_hash in site.links %}{% for link in link_hash %}<a href="{{ link[1] }}"><i class="fa fa-{{ link[0] }}"></i></a>{% endfor %}{% endfor %}</div>
+    <div><a href="https://scholar.google.com/citations?user=fs01uyQAAAAJ&hl=en&oi=ao"><i class="ai ai-google-scholar ai-3x"></i></a>{% for link_hash in site.links %}{% for link in link_hash %}<a href="{{ link[1] }}"><i class="fa fa-{{ link[0] }}"></i></a>{% endfor %}{% endfor %}</div>
     
   </nav>
 </header>
